# UzonCalc

./: .cspellrc.json  .gitignore  404.html  AGENTS.md  CantileverCapBeamCalculation.py  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  UzonCalc.code-workspace  ast_print.py  calculation_sheet.html  codegraph.json  contact-us.html  dev_server.py  downloads.html  example-full.py  example.py  index.html  package-lock.json  project-map.md  pyproject.toml  pytest.ini  readme.develop.md  requirements.txt  robots.txt  session-log.md  setup.cfg  setup.py  sitemap.xml  sponsor.html  test_echarts_fix.html  uzoncalc.code-workspace  uzoncalc.sln  wrangler.toml
src/api/: AGENTS.md  main.py  pyproject.toml  refactor.md  refactorPlan.md  requirements.txt
src/api/.ai/agent/: develop-guide.md
src/api/app/: calc_report_workspace_contract.py  i18n.py
src/api/app/controller/: depends.py  dto_base.py
src/api/app/db/: manager.py
src/api/app/exception/: custom_exception.py
src/api/app/mcp/: startup.py
src/api/app/middleware/: authentication.py  i18n.py
src/api/app/response/: response_result.py
src/api/app/sandbox/: readme.md  sandbox_server.py  worker.py
src/api/app/schedule/: __init__.py  cron_schedule_job.py  readme.md  scheduler.py
src/api/app/service/: admin_user_service.py  calc_core_spec.md  calc_execution_bundle_service.py  calc_execution_service.py  calc_report_archive_service.py  calc_report_artifact_service.py  calc_report_build_service.py  calc_report_category_service.py  calc_report_import_service.py  calc_report_instance_category_service.py  calc_report_instance_service.py  calc_report_service.py  calc_report_share_service.py  calc_report_state_service.py  calc_report_version_service.py  calc_report_workspace_service.py  code_format_service.py  department_service.py  playwright_service.py  remote_share_service.py  secret_storage_service.py  share_token_service.py  user_service.py
src/api/app/tests/: test_authentication.py  test_calc_execution_controller_result.py  test_calc_report_instance_service.py  test_html_cacher_content_patch.py  test_i18n.py  test_password_helper.py  test_playwright_service.py  test_toc_page_numbers_controller.py
src/api/app/utils/: file_explorer.py
src/api/app_pro/: README.md
src/api/config/: __init__.py  app.dev.ini  app.ini  app.prod.ini  config.py
src/api/docker/: Dockerfile.sandbox  Dockerfile.sandbox-service  docker-compose.yml
src/api/scripts/: build-portable.ps1  build-portable.py  compile-i18n.py  i18n_catalog.py  setup-embedded-python.ps1  setup-embedded-python.py
src/api/tests/scripts/: test_upsert_i18n.py
src/api/utils/: jwt_helper.py  password_helper.py
src/core/: MANIFEST.in  pyproject.toml
src/core/uzoncalc/: AGENTS.md  README.develop.md  README.md  __init__.py  cli.py  cli_archive.py  context.py  context_options.py  exporting.py  handler_protocols.py  interaction.py  optional_dependencies.py  pyproject.toml  requirements.txt  startup.py  units.py  workspace_imports.py
src/core/uzoncalc/cache/: json_db.py
src/core/uzoncalc/cli_core/: cli_archive.py  cli_archive_analysis.py  cli_archive_runtime.py  cli_png_container.py  cli_thumbnail.py  cli_workspace_archive.py  workspace_contract.py
src/core/uzoncalc/context_result_handler/: __init__.py  base_context_result_handler.py  post_pipeline.py  toc.py
src/core/uzoncalc/context_utils/: __init__.py  doc.py  element_models.py  elements.py  markdown.py  options.py  style.py  table.py  ui.py
src/core/uzoncalc/extension/: echarts.py  excel.py  js.py
src/core/uzoncalc/handcalc/: README.md  ast_instrument.py  ast_to_ir.py  ast_to_step_converter.py  ast_visitor.py  call_filters.py  instrument_cache.py  ir.py  preinstrument.py  recording_injector.py  special_functions.py  steps.py  transformers.py  unit_collector.py
src/core/uzoncalc/http_server/: __init__.py  constants.py  preview_state.py  request_handler.py  server.py  watcher.py
src/core/uzoncalc/service/: __init__.py  playwright_service.py  toc_page_numbers.py
src/core/uzoncalc/template/: calc_template.html  utils.py
ui/api/: .gitignore  main.py  pyproject.toml  requirements.txt
ui/api/app/controller/: __init__.py  depends.py  dto_base.py
ui/api/app/db/: init_db.py  manager.py
ui/api/app/exception/: custom_exception.py
ui/api/app/mcp/: mcp_app.py  mcp_dto.py  startup.py
ui/api/app/sandbox/: __init__.py  (+14 more)
ui/api/config/: app.dev.ini  app.ini  config.py  logging.ini
ui/api/docs/: INTEGRATION_CHECKLIST.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  USER_INPUT_HISTORY_GUIDE.md
ui/api/scripts/: build-portable.ps1  setup-embedded-python.ps1
ui/api/utils/: jwt_helper.py  password_helper.py
ui/web/src-tauri/: Cargo.toml  config.toml  readme.md  tauri.conf.json
uzoncalc/: README.develop.md  README.md  __init__.py  context.py  context_options.py  globals.py  interaction.py  pyproject.toml  setup.py  startup.py
uzoncalc/cache/: json_db.py
uzoncalc/context_utils/: README.md  __init__.py  doc.py  options.py
uzoncalc/extension/: echarts.py  readme.md
uzoncalc/handcalc/: ast_instrument.py  ast_to_ir.py  ast_validator.py  ast_visitor.py  call_filters.py  exceptions.py  ir.py  special_functions.py  steps.py  transformers.py
uzoncalc/handcalc/converters/: __init__.py  call_rendering.py  readme.md
uzoncalc/handcalc/post_handlers/: base_post_handler.py  parentheses_simplify.py  subscripting.py
uzoncalc/handcalc/rendering/: __init__.py  equation_renderer.py  fstring_renderer.py  html_renderer.py  value_renderer.py
uzoncalc/template/: calc_template.html  template.css
uzoncalc/template/js/: README.md
uzoncalc/tests/: example.py
uzoncalc/utils/: doc.py  elements.py  options.py  ui.py
uzoncalc/utils_core/: dot_dict.py
uzoncalc/utils_extra/: README.md
uzoncalc/uzoncalc/: cli.py  context.py  logger.py
uzoncalc/uzoncalc/context_utils/: doc.py
uzoncalc/uzoncalc/extension/: excel.py
uzoncalc/uzoncalc/handcalc/: recording_state.py  steps.py
uzoncalc/uzoncalc/template/: calc_template.html  utils.py
uzoncalc/uzoncalc/utils/: options.py
uzoncalc/uzoncalc/uzoncalc/: __init__.py
(+1607 files in other folders)
