[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["uzoncalc", "ui/api", "ui/desktop"]

[project]
name = "uzoncalcR"
version = "0.1.0"
description = "UzonCalc: A calculation framework"
requires-python = ">=3.10"
dependencies = [
    "build>=1.4.2",
    "fastapi>=0.134.0",
    "isort>=8.0.1",
    "matplotlib>=3.10.8",
    "numpy",
    "openpyxl",
    "pint",
    "pytest",
    "twine>=6.2.0",
    "uvicorn>=0.41.0",
    "xlwings",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["ui*", "uzoncalc*", "tests*", "scripts*", "examples*"]
