[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
# 使用 uv workspace 统一锁定版本，各子项目仍在各自 pyproject 中声明依赖。
members = ["ui/api"]

[project]
name = "uzoncalc"
version = "1.1.1"
description = "UzonCalc is a tool for writing engineering calculation documents using Python. With it, you can write calculation reports as smoothly as writing Python, and benefit from the full Python ecosystem and AI assistance."
readme = { file = "uzoncalc/README.md", content-type = "text/markdown" }
authors = [{ name = "uyoufu", email = "uyoufu@uzoncloud.com" }]
requires-python = ">=3.10"
dependencies = [
    "pint",
    "numpy",
    "openpyxl",
    "xlwings",
    "matplotlib>=3.10.8",
    "twine>=6.2.0",
    # 根项目提供文档/服务入口，保留 FastAPI 运行依赖。
    "fastapi>=0.134.0",
    "uvicorn>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/uyoufu/UzonCalc"

[project.scripts]
uzoncalc = "uzoncalc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uzoncalc", "uzoncalc.*"]
exclude = ["uzoncalc.build", "uzoncalc.build.*"]

[tool.setuptools.package-data]
"uzoncalc.template" = ["*.html", "*.css"]

[dependency-groups]
dev = [
    "build>=1.3.0",
]
