[metadata]
name = uzoncalc-core
version = 0.1.0
description = Core package for UzonCalc
long_description = file: README.md
long_description_content_type = text/markdown
author = uyoufu
author_email = uyoufu@uzoncloud.com
license = MIT
url = https://github.com/uyoufu/UzonCalc

[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
    

[options.packages.find]
where = core
