[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uzoncalc-api"
version = "1.3.0"
description = "UzonCalc API server"
requires-python = ">=3.13"
dependencies = [
    # API 服务独立声明自身运行依赖，不依赖根项目的依赖声明。
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart",
    "PyJWT",
    "Babel",
    "aiofiles",
    "interval",
    "numpy",
    "SQLAlchemy",
    "Alembic",
    "aiosqlite",
    "asyncpg",
    "websockets",
    "apscheduler",
    "black",
    "fastmcp>=3.0.2",
    "qdrant-client>=1.17.0",
    "uzoncalc[all]",
]

[tool.uv.sources]
uzoncalc = { workspace = true }

[tool.setuptools.packages.find]
include = ["app*", "config*", "utils*"]

[dependency-groups]
test = ["pytest>=9.0.3"]
