[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uzoncalc-api"
version = "1.1.0"
description = "UzonCalc API server"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "PyJWT",
    "Babel",
    "aiofiles",
    "interval",
    "numpy",
    "SQLAlchemy",
    "Alembic",
    "aiosqlite",
    "asyncpg",
    "websockets",
    "apscheduler",
    "black",
    "fastmcp>=3.0.2",
    "qdrant-client>=1.17.0",
    "uzoncalc",
]

[tool.uv.sources]
uzoncalc = { workspace = true }

[tool.setuptools.packages.find]
include = ["app*", "config*", "utils*"]
