[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uzoncalc"
version = "1.1.1"
description = "UzonCalc is a tool for writing engineering calculation documents using Python. With it, you can write calculation reports as smoothly as writing Python, and benefit from the full Python ecosystem and AI assistance."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "uyoufu", email = "uyoufu@uzoncloud.com" }]
requires-python = ">=3.10"
dependencies = ["pint", "numpy", "openpyxl", "xlwings", "matplotlib>=3.10.8"]

[project.urls]
Homepage = "https://github.com/uyoufu/UzonCalc"

[project.scripts]
uzoncalc = "uzoncalc.cli:main"

[tool.setuptools]
# pyproject 位于包目录内，从父目录发现 uzoncalc 及其子包。
package-dir = { "" = ".." }

[tool.setuptools.packages.find]
where = [".."]
include = ["uzoncalc*"]

[tool.setuptools.package-data]
"uzoncalc.template" = ["*.html", "*.css"]

[dependency-groups]
# 核心包测试依赖，与发布运行依赖分离。
test = ["astpretty>=3.0.0", "pytest>=9.0.3"]
# 核心包构建/发布依赖，只在发布流程中显式启用。
publish = ["build>=1.3.0", "twine>=6.2.0"]
